# lolly-desktop

./: README.md  package-lock.json  package.json  vite.config.js
bridge-overrides/: capabilities-provided.js  capture.js  export.js  state.js
flatpak/: .gitignore  README.md  tools.lolly.desktop.desktop  tools.lolly.desktop.metainfo.xml  tools.lolly.desktop.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: capture.rs  lib.rs  main.rs
