[package]
name = "lolly-desktop"
version = "0.1.0"
edition = "2021"

[lib]
name = "lolly_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-http = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Page capture (url-shot tool): drives a headless Chrome over the DevTools
# Protocol to screenshot arbitrary URLs. Requires Chrome/Chromium installed.
# CDP returns screenshots already base64-encoded, so no separate base64 dep.
headless_chrome = "1"
